# zulip-mcp

./: .gitignore  .zuliprc.example  CLAUDE.md  README.md  config.yaml.example  prompt_with_privacy.py  pyproject.toml  zulip_local.py
src/zulip_mcp/: anonymizer.py  client.py  config.py  server.py
